--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-db.url=jdbc:postgresql://127.0.0.1:5432/andersen
-db.user=postgres
-db.password=root
+db.url=jdbc:postgresql://192.168.0.106:5432/andersen
+db.user=andersen
+db.password=andersen
