--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-db.url=jdbc:postgresql://192.168.0.106:5432/andersen
-db.user=andersen
-db.password=andersen
+db.url=jdbc:postgresql://192.168.43.142:5432/test
+db.user=dima
+db.password=dima
